--- a/.gitlab/ci/environments/dev.yml
+++ b/.gitlab/ci/environments/dev.yml
@@ -2,24 +2,24 @@
 
 # Dev US-West-2 - Validate
 validate:dev:us-west-2:
-  extends:
-    - .validate_template
-    - .variables:dev:us-west-2
+  extends: terraform:validate
+  variables:
+    TF_ROOT: "environments/dev/us-west-2"
 
 # Dev US-West-2 - Plan
 plan:dev:us-west-2:
-  extends:
-    - .plan_template
-    - .variables:dev:us-west-2
+  extends: terraform:plan
+  variables:
+    TF_ROOT: "environments/dev/us-west-2"
   only:
     - merge_requests
     - main
 
-# Dev US-West-2 - Apply
+# Dev US-West-2 - Deploy
 apply:dev:us-west-2:
-  extends:
-    - .apply_template
-    - .variables:dev:us-west-2
+  extends: terraform:deploy
+  variables:
+    TF_ROOT: "environments/dev/us-west-2"
   environment:
     name: dev/us-west-2
     action: prepare
